# aios

./: .denote  .gitattributes  .gitignore  .rust-toolchain.toml  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  clippy.toml  linker.ld  rustfmt.toml
.cargo/: config.toml
.github/: FUNDING.yml
.github/skills/workflow-enforcer/: SKILL.md  enforce-workflow.sh
.github/workflows/: ai-auto-merge.yml  ai-auto-rebase.yml  ai-research.yml  aios-bot.yml  aios-self-evolve.yml  branch-cleanup.yml
build_new/: .rustc_info.json
build_new/release/.fingerprint/aios-cbde3fd1807a9c48/: build-script-build-script-build  build-script-build-script-build.json
build_new/release/.fingerprint/rustversion-1aec0e4319e2ef47/: lib-rustversion  (+2 more)
docs/: CHANGELOG.md  CONTRIBUTING.md  DEBUG.md  FEATURES.md  FUNDING.md  I18N.md  ROADMAP.md
iso/boot/grub/: grub.cfg
scripts/: aios-env  enforce-workflow.sh  setup-branch-protection.sh
src/: README.md
src/arch/x86_64/: cpuid.rs  mod.rs  msr.rs  tsc.rs
src/kernel/: allocator.rs  ata.rs  boot.S  debug.rs  driver.rs  e1000.rs  elf.rs  ext2.rs  gdt.rs  interrupts.rs  kernel_entry.rs  keyboard.rs  lib.rs  main.rs  memory.rs  multiboot2.S  multiboot2.rs  network.rs  pci.rs  pic.rs  process.rs  ramdisk.rs  serial.rs  syscalls.rs  task.rs  user_init.rs  vfs.rs  vga.rs  vmm.rs
src/kernel/shell/: builtins.rs  history.rs  job_control.rs  mod.rs  parser.rs
src/lib/boot_info/: Cargo.toml  lib.rs
test/: README.md
test/integration/: vmm_tests.rs
test/qemu/: run_tests.sh
test/unit/: memory_tests.rs  serial_tests.rs
(+28 files in other folders)
