[package]
name = "aios"
version = "0.1.0"
edition = "2021"
authors = ["AIOS Contributors <aios@aios.ai>"]
description = "An AI-generated operating system for x86_64"
license = "MIT"
repository = "https://github.com/joeyjiaojg/aios"
keywords = ["os", "kernel", "ai-generated", "x86_64"]
categories = ["no-std", "embedded"]

[dependencies]
bitflags = "2.4"
log = "0.4"
volatile = "0.6"
x86_64 = "0.15"
bootloader = "0.9"

[lib]
name = "aios_kernel"
crate-type = ["staticlib"]
path = "src/kernel/lib.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[features]
default = []
x86_64 = []
